# This file is part of the Hercules-Helper project.
#
# (C) Copyright William R. Lewis, 2020-2023

# Changelog:
#
# Updated: 23 SEP 2023
# - add support for Orange OS (Arch based), on Orange Pi Zero 2W board
#
# Updated: 11 SEP 2023
# - add libcap, libc6-compat, musl-locales, and procps for Alpine
#
# Updated: 19 AUG 2023
# - don't assume ARM is a Raspberry Pi in the Regina patch
# - prompt to quit if 'sudo' is missing and we'll probably need it
#
# Updated: 08 JUL 2023
# - add support for macOS 14 Sonoma
#
# Updated: 28 JUN 2023
# - corrections to default config files
#
# Updated: 27 JUN 2023
# - run 'sudo ldconfig' after installation, if --sudo is in effect
#
# Updated: 14 JUN 2023
# - move search for existing binaries to helper-find-existing-binaries.sh
#   for performance reasons. This can be extremely slow on some systems.
# - loosen up the tests for existing env var scripts in the shell profile
#
# Updated: 12 JUN 2023
# - correct typo in default config git branch
#
# Updated: 11 JUN 2023
# - correct wording describing adding env vars to shell profile
# - correct year in dates in recent ChangeLog entries
# - add minor clarification to "Build tools versions:" message
#
# Updated: 10 JUN 2023
# - fix typos in config files
#
# Updated: 09 JUN 2023
# - add info about Zsh profile to the README
#
# Updated: 08 JUN 2023
# - support adding to Zsh profile
# - don't ask y/N for sudo if --sudo option is present
#
# Updated: 06 JUN 2023
# - added/update copyright and license info
# - make --auto the default
# - improve handling of 'sudo' detection
# - prompt to continue if 'sudo' will be required later
# - rearrange some of the major steps to put 'sudo' warning sooner
# - create 'extra-info...log' file to unclutter main output
#
# Updated: 31 MAY 2023
# - rename main script to hercules-buildall.sh
# - print deprecation msg from old hyperion-buildall.sh
#
# Updated: 30 MAY 2023
# - accommodate building from non-Hyperion named repos